[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["willem-strydom  <s.willem@wustl.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
faker = "^16.6.1"
pandas = "^1.5.3"
numpy = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
